--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -12,7 +12,7 @@
   }
   
   body {
-    font-family: "Lucida Grande";
+    font-family: "Aspira WebFont", Helvetica, Arial, sans-serif;
   }
   
   a {
@@ -31,9 +31,9 @@
   
   .top-wrapper {
     padding: 180px 0 100px 0;
-    background-image: url(http://bit.ly/solveurpro-background);
+    background-image: url(https://img.freepik.com/free-vector/mobile-app-development-background_73903-295.jpg);
     background-size: cover;
-    color: rgb(16, 2, 67);
+    color: rgb(0, 0, 0);
     text-align: left;
   }
   
@@ -239,7 +239,7 @@
     background-color: #93cee9;
     height: auto;
     width: 100vw;
-    font-family: "Brush Script MT";
+    font-family: "Aspira WebFont", Helvetica, Arial, sans-serif;
     padding-top: 35px;
     color: #fff;
   }
@@ -300,7 +300,7 @@
   }
   .footer-container p {
     color : #000000;
-    font-size : 20px;
+    font-size : 15px;
     text-align: center;
   }
   
@@ -312,7 +312,7 @@
   }
   
   .footer-bottom p {
-    font-size: 20px;
+    font-size: 15px;
     word-spacing: 4px;
     text-transform: capitalize;
   }
